--- a/static/bibliography.bib
+++ b/static/bibliography.bib
@@ -1,3 +1,13 @@
+@article{garcia_comprehensive_2015,
+	title = {A Comprehensive Survey on Safe Reinforcement Learning},
+	volume = {16},
+	journal = {Journal of Machine Learning Research},
+	author = {García, Javier and Fernandez, Fernándo},
+	year = {2015},
+	pages = {1437--1480},
+	url = {https://www.jmlr.org/papers/volume16/garcia15a/garcia15a.pdf}
+}
+
 @article{stable-baselines3,
   author  = {Antonin Raffin and Ashley Hill and Adam Gleave and Anssi Kanervisto and Maximilian Ernestus and Noah Dormann},
   title   = {Stable-Baselines3: Reliable Reinforcement Learning Implementations},
@@ -14,15 +24,9 @@
                 Daniel J. Mankowitz and
                 Shie Mannor},
   title      = {Reward Constrained Policy Optimization},
-  journal    = {CoRR},
-  volume     = {abs/1805.11074},
-  year       = {2018},
-  url        = {http://arxiv.org/abs/1805.11074},
-  eprinttype = {arXiv},
-  eprint     = {1805.11074},
-  timestamp  = {Mon, 13 Aug 2018 16:47:13 +0200},
-  biburl     = {https://dblp.org/rec/journals/corr/abs-1805-11074.bib},
-  bibsource  = {dblp computer science bibliography, https://dblp.org}
+  journal    = {ICLR},
+  year       = {2019},
+  url        = {https://openreview.net/pdf?id=SkfrvsA9FX},
 }
 
 @article{Schulman2017PPO,
